added font awesome. fixed some configuration

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 
 # Setup
 title:            Roy Wijaya
-tagline:          'A Jekyll theme'
-description:      'A simple software engineer whos trying to understand on this never ending journey'
+tagline:          'System Engineer'
+description:      'A simple software engineer'
 url:              https://lymsia.github.io
 baseurl:          /
 
