add fontawesome and remove about me

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            Roy Wijaya
-tagline:          'System Engineer'
+tagline:          'Software Engineer'
 description:      'A simple software engineer'
 url:              https://lymsia.github.io
 baseurl:          /
